<resources>
    <string name="app_name">YayatoTaxi</string>

<!--
       AIzaSyA9RhUjM4t6hd1FZn671IXvE4m4Ijw87T0
-->
    <string name="api_key" translatable="false">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="map_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>

    <string name="facebook_app_id">2465870793657332</string>
    <string name="fb_login_protocol_scheme">fb2465870793657332</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="or_login_with_social_account">Or Login with social account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city_name">City Name</string>
    <string name="address">Address</string>
    <string name="term_text">I accept all the <font fgcolor="#3EB24D">Terms and Conditions</font></string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="wallet">Wallet</string>
    <string name="ride_history">Ride History</string>
    <string name="update_picture">Update Picture</string>
    <string name="save_details">Save Details</string>
    <string name="services">Services</string>
    <string name="select_services">Select Service</string>
    <string name="on">ON</string>
    <string name="rental_taxi">Rental Taxi</string>
    <string name="transaction">Transaction</string>
    <string name="terms_condition_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="select_memeber_text">Select the member type to whom you would like to transfer to wallet balance</string>
    <string name="add_money">Add Money</string>
    <string name="transfer">Transfer</string>
    <string name="my_wallet">My Wallet</string>
    <string name="choose_or_enter_amt">Choose or enter amount</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="send_money">Send Money</string>
    <string name="its_safe_and_secure">It\'s Safe and Scure</string>
    <string name="enter_amt">Enter Amount</string>
    <string name="payment_type">Payment Type</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="we_sent_6_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="next">Next</string>
    <string name="select_pick_up_address">Select Pickup Address</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="select_pickup_and_dropoff_address">Select Pick and Drop Location</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="book_ride">Book Ride</string>
    <string name="estimated_trip_time">Estimated Time</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="cash">Cash Pay</string>
    <string name="card">Card Pay</string>
    <string name="wallet_pay">Wallet Pay</string>
    <string name="searching_for_a_driver">Searching for driver...</string>
    <string name="rate">Rate</string>
    <string name="ok">Ok</string>
    <string name="do_payment">Do Payment</string>
    <string name="ride_has_ended">Ride Has Ended</string>
    <string name="find_pool">Find Pool</string>
    <string name="find_drivers_in_this_route">Find Drivers In this Route</string>
    <string name="send_request_to_driver">Send Request To Driver</string>
    <string name="available_drivers">Available Drivers</string>
    <string name="msg">message</string>
    <string name="pool_request">Pool Request</string>
    <string name="request_accepted">Request Accepted!</string>
    <string name="track_diver">Track Driver</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="your_request_is_successfully_accepted">Your request is successfully accepted !</string>
    <string name="password_validation_text">Password should be greater than 4 digits</string>
    <string name="user">User</string>
    <string name="reset_pass_msg">Reset password link sent to your mail-id</string>
    <string name="please_upload_profile">Please upload profile picture</string>
    <string name="driver">Driver</string>
    <string name="enter_name_text">Please enter your name</string>
    <string name="enter_name_firsttext">Please enter your first name</string>
    <string name="enter_name_lasttext">Please enter your last name</string>
    <string name="enter_phone_text">Please enter your phone number</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="enter_6_digit_code">Please enter 6 digit verification code</string>
    <string name="please_check_internet">Please check your connection!</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_internet_text">Please check your internet connection!</string>
    <string name="enter_email_text">Please enter email</string>
    <string name="please_enter_pass">Please enter password</string>
    <string name="please_wait">Please wait...</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="enter_address1_text">Please select Address</string>
    <string name="please_accept_term_con">Please accept terms and condition</string>
    <string name="user_already_exits">User Already Exists</string>
    <string name="email_not_found">Email Not Found</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="add_children">Add Children</string>
    <string name="my_childrens">My Childrens</string>
    <string name="pick_time">Pickup Time</string>
    <string name="dropOff_time">Dropoff Time</string>
    <string name="select_pickup_and_dropoff_time_for_your_children">Select Pickup and dropoff time for your children</string>
    <string name="child_name">Child Name</string>
    <string name="child_age">Child Age</string>
    <string name="home_address">Home Address</string>
    <string name="school_address">School Address</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="please_select_pickuptime">Please select pickup time</string>
    <string name="please_select_dropofftime">Please select dropoff time</string>
    <string name="please_selecthome_address">Please select home address</string>
    <string name="please_select_schoohl_add">Please select school address</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="success">Success</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="please_add_child">Please add children</string>
    <string name="name">Name :</string>
    <string name="age">Age :</string>
    <string name="waiting_for_driver">Waiting for Driver..</string>
    <string name="chat"><u>Chat</u></string>
    <string name="select_time_when_you_want_your_vehicle_for_service">Select Start And End Date Time When You Want for Vehicle</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_email">Please enter email</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="please_enter_valid_amount">Please enter valid amount</string>
<!--
    <string name="default_web_client_id">58116095033-rnrb6q07plc7tgdplahkprsdndmsetvs.apps.googleusercontent.com</string>
-->
</resources>