<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/top_round_white_back"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center_horizontal"
                android:padding="@dimen/_5sdp"
                android:text="@string/send_money"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/its_safe_and_secure"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/select_memeber_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rbUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/yellow"
                    android:text="@string/user"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbProvider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/yellow"
                    android:text="@string/driver"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

            </RadioGroup>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/white"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/email"
                    android:inputType="textVisiblePassword"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@color/white"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:contentPadding="@dimen/_2sdp">

                <EditText
                    android:id="@+id/etEnterAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/enter_amt"
                    android:inputType="numberDecimal"
                    android:maxLength="7"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:background="@drawable/login_bt_back"
                android:padding="@dimen/_10sdp"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:paddingLeft="@dimen/_15sdp"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_15sdp"
                android:paddingTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:paddingBottom="@dimen/_5sdp"
                android:textSize="@dimen/_13sdp"
                android:text="@string/cancel"/>

        </LinearLayout>

    </RelativeLayout>

</layout>