<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/card_footer" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <RelativeLayout
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/white_bg_5">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/left_arrow_black" />

            </RelativeLayout>

            <TextView
                android:id="@+id/titler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/poppins_semibold"
                android:text="Ride Option"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_ride_book"
                    android:padding="@dimen/_5sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estimated_trip_time"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:fontFamily="@font/poppins_regular" />

                        <TextView
                            android:id="@+id/tv_ride_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="22 min"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:fontFamily="@font/poppins_medium" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_payment_type"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/rbCash"
                            android:layout_width="0dp"
                            android:includeFontPadding="false"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12sdp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/cash"/>

                        <RadioButton
                            android:id="@+id/rbCard"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:includeFontPadding="false"
                            android:textSize="@dimen/_12sdp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/card"/>

                        <RadioButton
                            android:id="@+id/rbWallet"
                            android:layout_width="0dp"
                            android:includeFontPadding="false"
                            android:layout_weight="1"
                            android:textSize="@dimen/_12sdp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/wallet_pay"/>

                    </RadioGroup>

                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnBook"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@drawable/login_bt_back"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_8sdp"
                        android:text="@string/book_ride"
                        android:textAllCaps="false"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnScheduleRide"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:background="@color/purple_700"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/schedule_ride"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>